<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="60dp"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_main_nav_settings"
        android:text="@string/main_nav_settings"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/main_nav_btn_bg"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_main_nav_import"
        android:text="@string/main_nav_import"
        android:textSize="25sp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:background="@drawable/main_nav_btn_bg"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_main_nav_export"
        android:text="@string/main_nav_export"
        android:textSize="25sp"
        android:visibility="gone"
        android:background="@drawable/main_nav_btn_bg"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_main_nav_detail"
        android:text="@string/main_nav_detail"
        android:textSize="25sp"
        android:background="@drawable/main_nav_btn_bg"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_main_nav_about"
        android:text="@string/main_nav_about"
        android:textColor="@color/white"
        android:background="@drawable/main_nav_btn_bg"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_nav_btn_bg"
        android:text="@string/main_nav_exit"
        android:layout_gravity="end"
        android:id="@+id/btn_main_nav_exit"
        android:textColor="@color/white"
        android:textSize="25sp"
        />
</LinearLayout>