<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_layout"
    android:background="@null"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_input_title"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:id="@+id/dialog_lab_title"
        android:background="@color/app_bg"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_dialog_input_weight_key"
            android:textColor="@color/black"
            android:paddingBottom="0dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dialog_input_weight"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="请输入您的体重值"
            android:inputType="number"
            android:textColor="@color/black"
            android:digits="0123456789."
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cacnel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cacel"
            android:textColor="@color/black"
            android:background="@drawable/dialog_btn_bg"
            android:textSize="15sp" />

        <Button
            android:id="@+id/dialog_submit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/dialog_btn_bg"
            android:text="@string/submit"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
